# srth-new-diffusion

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  ros2_version.md  test_depth.py  training_run.sh
conf/high_level_policy/: config.yaml  inference.yaml
conf/high_level_policy/dataset/: example.yaml
conf/high_level_policy/policy/: act.yaml
conf/low_level_policy/: config.yaml  inference.yaml  train.yaml
conf/low_level_policy/dataloader/: complete.yaml  example.yaml  example_debug.yaml  example_keypoints.yaml  no_recovery.yaml  test_data_correction.yaml  test_multi_action.yaml  updated_format.yaml
conf/low_level_policy/hydra/job_logging/: custom.yaml
conf/low_level_policy/policy/: act.yaml  act_depth.yaml  act_kp.yaml  act_updated.yaml  diffusion_trans.yaml
docs/: runai.md
src/srth_new.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/srth_new/annotation/: affordance_keypoint_annotator.py  install_cotracker.sh  propagate_points.py  verify_annotations.py
src/srth_new/general/: constants.py  utils.py
src/srth_new/general/cam_intrinsics/: endoscope_left.yaml  endoscope_right.yaml  info.py
src/srth_new/general/utils/: dataset.py  lang_encoding.py  processing.py
src/srth_new/high_level_policy/: train.py
src/srth_new/high_level_policy/dataset/: high_level_dataset.py
src/srth_new/keypoint_detection/: debug_inference.py  train.py
src/srth_new/low_level_policy/: __init__.py  data.py  inference.py  policy.py  run_inference.py  train.py  utils.py
src/srth_new/low_level_policy/dataset/: img_aug.py  (+10 more)
(+41 files in other folders)
